--- a/css/product-detail.css
+++ b/css/product-detail.css
@@ -237,7 +237,8 @@
 .swiper-slide-img {
   width: 100%;
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  max-height: 100%;
 }
 
 .swiper-pagination-bullets {
