--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ ul {
   content: "";
   width: 24px;
   height: 24px;
-  background-image: url("/img/close.svg");
+  background-image: url("/product-detail/img/close.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
